fix: aligning padding between components for test accordion and create test (#279)

--- a/apps/platform/src/components/banner/banner.module.css
+++ b/apps/platform/src/components/banner/banner.module.css
@@ -25,3 +25,8 @@
   color: var(--white);
   text-underline-offset: 2px; 
 }
+
+.banner a {
+  color: var(--white);
+  text-underline-offset: 2px;  
+}
